src/test/resources/fixtures/regularExpressions/missing-u-modifier.php
<?php

    preg_match(<error descr="/u modifier is missing (unicode characters found).">'/[а-яё].+/i'</error>, '');

    preg_match('/abc.+/i', '');